# rulebook-ai

./: .clinerules  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  CONTRIBUTING.md  LICENSE  README.md  clean_rules.py  copy_rules.py  pyproject.toml  technical.md  tmp_compare_cursor_roo_rule_files.md
.cursor/rules/: 08-code_v1.md.mdc  error-documentation.mdc  error-documentation_template.mdc  lessons-learned_template.mdc
.github/workflows/: ci.yml
.roo/rules-debug/: 01-debug.md
.roo/rules/rules/: 06-rules_v1.md
.roo/rules/rules-architect/: 01-plan_v1.md
docs/: feature_tasks.md  product_requirement_docs.md  technical.md
docs/analysis/: comparison_docs_prototypes_human_AI_collaboration_by_scope.md  epic_level_project_management_docs_for_human_AI_collaboration_prototype.md  manage_rules_script_design.md  story_level_project_management_docs_for_human_AI_collaboration_prototype.md
docs/literature/: custom_rules_setup_cline.md  custom_rules_setup_roo_code.md
legacy_rules/: .clinerules
legacy_rules/.roo/rules-debug/: 01-debug
memory/docs/: architecture.md  technical.md
memory/docs/analysis/: manage_rules_script_design.md  summary_of_current_rules_approach.md  task_level_project_management_docs_for_human_AI_collaboration_prototype.md
memory/docs/literature/: custom_rules_setup_github_copilot.md  custom_rules_setup_windsurf.md  custom_rules_setup_windsurf_update.md
memory/docs/user_guide/: rule_loading_summary.md  rule_template.md
memory/tasks/: task_plan.md
project_rules_template/01-rules/: 06-rules_v1.md
rule_sets/: README.md
rule_sets/light-spec/01-rules/: 04-archiecture-understanding.md
rule_sets/medium-spec/01-rules/: 04-archiecture-understanding.md
rule_sets/no_memory_interation_rules/01-rules/: 00-meta-rules.md  05-directory-structure.md
rules_template/: AI-rule-set-benchmark-analysis.md
rules_template/01-rules/: 01-memory.md
rules_template/02-rules-architect/: 01-plan_v1.md
rules_template/03-rules-code/: 01-code_v1.md
rules_template/heavy-spec/01-rules/: 03-lessons-learned.md  06-rules_v1.md
rules_template/light-spec/01-rules/: 01-memory.md  05-directory-structure.md  06-rules_v1.md
rules_template/medium-spec/01-rules/: 01-memory.md  06-rules_v1.md
rules_template/no_memory_interation_rules/01-rules/: 06-rules_v1.md
src/: clean_rules.py  copy_rules.py  manage_rules.py
src/rulebook_ai/: __init__.py  __main__.py  cli.py  core.py
src/rulebook_ai/memory/docs/analysis/: rule_enhancements_for_memory_interaction.md
src/rulebook_ai/memory/docs/literature/: custom_rules_setup_cursor.md
src/rulebook_ai/memory/docs/user_guide/: rule_loading_summary.md  rule_template.md
src/rulebook_ai/memory/tasks/: active_context.md
src/rulebook_ai/rule_sets/heavy-spec/01-rules/: 00-meta-rules.md
src/rulebook_ai/rule_sets/light-spec/01-rules/: 00-meta-rules.md  02-error-documentation.md  03-lessons-learned.md  06-rules_v1.md
src/rulebook_ai/rule_sets/light-spec/02-rules-architect/: 01-plan_v1.md
src/rulebook_ai/rule_sets/light-spec/03-rules-code/: 01-code_v1.md
src/rulebook_ai/rule_sets/light-spec/04-rules-debug/: 01-debug_v1.md
src/rulebook_ai/rule_sets/medium-spec/01-rules/: 00-meta-rules.md  01-memory.md  06-rules_v1.md
src/rulebook_ai/rule_sets/medium-spec/02-rules-architect/: 01-plan_v1.md
src/rulebook_ai/rule_sets/medium-spec/03-rules-code/: 01-code_v1.md
src/rulebook_ai/rule_sets/medium-spec/04-rules-debug/: 01-debug_v1.md
src/rulebook_ai/rule_sets/no_memory_interation_rules/01-rules/: 00-meta-rules.md  04-archiecture-understanding.md  06-rules_v1.md
src/rulebook_ai/rule_sets/no_memory_interation_rules/02-rules-architect/: 01-plan_v1.md
src/rulebook_ai/rule_sets/no_memory_interation_rules/03-rules-code/: 01-code_v1.md
src/rulebook_ai/rule_sets/no_memory_interation_rules/04-rules-debug/: 01-debug_v1.md
src/rulebook_ai/rule_sets/sprint-spec/01-rules/: 00-meta-rules.md  01-memory.md  05-directory-structure.md  06-rules_v1.md
src/rulebook_ai/rule_sets/sprint-spec/02-rules-architect/: 01-plan_v1.md
src/rulebook_ai/rule_sets/sprint-spec/03-rules-code/: 01-code_v1.md
src/rulebook_ai/rule_sets/sprint-spec/04-rules-debug/: 01-debug_v1.md
src/rulebook_ai/rule_sets/sprint-spec/memory_starters/docs/: architecture_template.md
src/rulebook_ai/rule_sets/sprint-spec/memory_starters/tasks/: active_context_template.md  sprint_history_template.md  sprint_plan_template.md
src/rulebook_ai/rule_sets/test-set/01-rules/: 01-basic-rule.md
tasks/: active_context.md  tasks_plan.md
tests/: README.md  test_manage_rules.py
tests/integration/: conftest.py  test_cli_commands.py  test_manage_rules.py  test_package_installation.py  test_rule_manager.py  test_rule_manager_integration.py  test_tools_integration.py
tests/unit/: conftest.py  test_rule_manager.py
